Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -168,7 +168,8 @@ ul ul, ol ol, dl dl {
   font-weight: normal
 }
 
-ul, ol, dt { font-weight: bolder }
+ul, ol, dt
+  { font-weight: bolder }
 nav ol, nav ul
   { list-style: none }
 
